hompage api in aggregation service